# icsh-shell

./: .gitignore  README.md
icsh/: CMakeLists.txt  Dockerfile  Makefile  builtin.c  builtin.h  builtin.h.gch  hackinteach  icsh  icsh.c  log.txt  lsLog.txt  misc.h  shell.c  shell.h  shell.h.gch
icsh/examples/: builtin.c  builtin.h  exec_caller  exec_caller.c  execvp_example  execvp_example.c  fork_example.c  launch  launch.c  launchset  misc.c  misc.h  test  test.c
